welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:7: error: Unmatched closing brace '}' ignored here
 }
 ^